# QuickTranslate

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  translate.rs
src/components/: SettingsView.tsx  TranslateView.tsx
